--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --no-notify src/server.ts | bunyan",
-    "start": "ts-node src/server.ts | bunyan"
+    "start": "ts-node src/server.ts | bunyan",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,10 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
