--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express": "^4.18.2",
     "express-mung": "^0.5.1",
     "helmet": "^6.0.1",
+    "knex": "^2.4.2",
     "nodemon": "^2.0.20",
+    "objection": "^3.0.1",
+    "pg": "^8.9.0",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
