--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-mung": "^0.5.1",
     "helmet": "^6.0.1",
     "knex": "^2.4.2",
+    "luxon": "^3.2.1",
     "nodemon": "^2.0.20",
     "objection": "^3.0.1",
     "pg": "^8.9.0",
@@ -33,6 +34,7 @@
     "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/luxon": "^3.2.0",
     "@types/node": "^18.13.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
