--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "luxon": "^3.2.1",
     "nodemon": "^2.0.20",
     "objection": "^3.0.1",
+    "on-headers": "^1.0.2",
     "pg": "^8.9.0",
     "tslib": "^2.5.0"
   },
@@ -36,6 +37,7 @@
     "@types/jest": "^29.4.0",
     "@types/luxon": "^3.2.0",
     "@types/node": "^18.13.0",
+    "@types/on-headers": "^1.0.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
